[package]
name = "fixed2float"
version = "1.0.0"
authors = ["Francesco Urbani <francescourbanidue@gmail.com>"]
edition = "2021"
keywords = ["fixed", "float", "q-format"]
documentation = "https://docs.rs/fixed2float"
# homepage = ""
license = "MIT"
readme = "README.md"
repository = "https://github.com/urbanij/fixed2float"
description = "Fixed point to floating point conversion utility"
exclude = [".github", ".gitignore"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

