[package]
name = "py-fixed2float"
version = "4.0.1"
authors = ["Francesco Urbani <francescourbanidue@gmail.com>"]
edition = "2021"
keywords = ["fixed", "float", "q-format"]
documentation = ""
# homepage = ""
readme = "README.md"
repository = "https://github.com/urbanij/fixed2float"
description = "Fixed point to floating point conversion utility"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]


[lib]
name = "fixed2float"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "fixed2float"


[dependencies]
fixed2float = { path = "../" }
pyo3 = { version = "0.18.2", features = ["extension-module"], optional = false }
